--- a/main.html
+++ b/main.html
@@ -7,6 +7,30 @@
 </head>
 
 <body>
+
+	<table border="1">
+		<thead>
+			<tr>
+				<th>Roll number</th>
+				<th>Name</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr>
+				<td>101</td>
+				<td>white</td>
+			</tr>
+			<tr>
+				<td>103</td>
+				<td>blue</td>
+			</tr>
+			<tr>
+				<td>105</td>
+				<td>green</td>
+			</tr>
+		</tbody>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
